# echem-analyzer

./: .gitattributes  .gitignore  LICENSE  README.md  USER_GUIDE.md  build_windows.bat  code-review.md  echem-analyzer-design.md  echem_analyzer.spec  komiya2026-redox-cycling.docx  komiya2026-redox-cycling.md  main.py  monetization-lightweight.md  nife-ldh-aging-literature-mobile.md  nife-ldh-aging-literature.docx  nife-ldh-aging-literature.md  nife-ldh-aging-literature.txt  pyproject.toml  requirements.txt  setup.py  xps-raman-analysis.md
echem_core/: __init__.py  cli.py  version.py
echem_core/analysis/: cv.py  eis.py  lsv.py
echem_core/batch/: batch_processor.py  report.py
echem_core/io/: __init__.py  chi_parser.py  corrtest_parser.py  csv_parser.py
echem_core/model/: __init__.py  measurement.py
echem_core/plotting/: __init__.py  cv_plot.py  fonts.py  lsv_plot.py  styles.py
echem_core/processing/: __init__.py  background.py  convert.py  normalize.py
echem_core/spectroscopy/analysis/: raman.py  xps.py
echem_core/spectroscopy/fitting/: lineshapes.py  peak_fit.py
echem_core/spectroscopy/io/: csv_spectrum.py
echem_core/spectroscopy/model/: __init__.py  sample.py  spectrum.py
examples/: quickstart.py  sample_chi_lsv.txt
gui/: __init__.py  app_info.py  main_window.py  splash.py
gui/tabs/: batch_tab.py  cv_tab.py  data_browser_tab.py  eis_tab.py  lsv_tab.py  project_tab.py  stability_tab.py
gui/widgets/: analysis_common.py  measurement_list.py  multi_curve_overlay.py  plot_widget.py
tests/: test_csstudio_parser.py
(+4 files in other folders)
