[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "echem-analyzer"
version = "0.1.0"
description = "电化学数据处理工具 - Electrochemistry data analysis toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "openpyxl",
]

[project.optional-dependencies]
test = [
    "pytest",
]
gui = [
    "PySide6>=6.5",
    "matplotlib",
    "numpy",
    "scipy",
    "openpyxl",
    "lmfit",
]

[project.scripts]
echem = "echem_core.cli:main"
